<?php
namespace Src\Adapter\Contracts;

interface AdvancedMediaPlayer {
    public function playAudioMedia(string $fileName);
}
