<?php

namespace Src\Enum;

enum TypeMedia: string {
    case MP4 = 'mp4';
    case VLC = 'vlc';
    case MP3 = 'mp3';
    case AVI = 'avi';
}